--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.83.0",
+    "beanheads": "^0.3.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
